--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,7 +1,7 @@
 .btn {
 	background-color: transparent;
 	border: 0.15em solid white;
-	border-radius: .5rem;
+	border-radius: 1rem;
 	color: white;
 	font-size: 1.6rem;
 	letter-spacing: 0.5px;
