--- a/src/styles/proyecto/Team.css
+++ b/src/styles/proyecto/Team.css
@@ -4,7 +4,7 @@
 	background-image: url(../../assets/images/equipo.jpg);
 	background-position: center;
 	background-size: cover;	
-	box-shadow: 0 1.5rem 3rem -.5rem var(--azul);
+  box-shadow: 0 1rem 3rem -.5rem rgba(0, 0, 0, 0.50);
 	display: flex;
 	flex-direction: column;
 	height: 100%;
