--- a/src/styles/proyecto/Proyecto.css
+++ b/src/styles/proyecto/Proyecto.css
@@ -1,6 +1,6 @@
 
 .proyecto {
-	background: url(../assets/fondoPersonas.png);
+	background: url(../../assets/fondoPersonas.png);
 	background-position: bottom;
 	background-size: cover;
 }
