--- a/src/styles/header/Header.css
+++ b/src/styles/header/Header.css
@@ -8,6 +8,7 @@
 .header__container {
 	position: absolute;
 	margin: 20vh 2rem 0 0;
+	right: 0;
 }
 
 .btn__container {
@@ -47,7 +48,7 @@
 
 /* BOTTOM IMG */
 .header__img {
-	background-image: url(../assets/headerCasas.png);
+	background-image: url(../../assets/headerCasas.png);
 	background-size: cover;
 	background-position: center;
 	box-shadow: inset 0 -3rem 2rem -1rem #eee3d8;
