--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,115 +1,102 @@
 /* GALLERY */
-
 .gallery {
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    width: 0%;
-    height: 100vh;
-    background-color: var(--azulOpa);
-    z-index: 5;
-    transition: width 500ms ease;
-}
-
-.gallery p {
-    position: absolute;
-    color: white;
-    left: 9rem;
-    top: 10rem;
-    font-size: 2rem;
-    cursor: none;
-    z-index: 15;
-}
-
-.gallery span {
-    position: absolute;
-    color: white;
-    top: 10rem;
-    right: 9rem;
-    font-size: 3rem;
-    cursor: pointer;
-    z-index: 15;
-}
-
-.gallery span:hover {
-    color: rgba(255, 255, 255, 0.63);
+	bottom: 0;
+	position: fixed;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: var(--azulDarker);
+	z-index: 5;
+    padding: 0;
 }
 
 .gallery__container {
-    margin: 0rem 8rem;
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    margin-top: 10rem;
+}
+
+.gallery__close {
+    color: white;
+    position: absolute;
+    right: 3rem;
+    top: 30vw;
+    font-size: 2.5rem;
+    z-index: 6;
+}
+
+.slider__container {
+    position: relative;
     height: 100%;
 }
 
-.splide__track {
-    /* height: 90vh; */
-    /* padding: 5rem 0 0; */
-}
-
-.splide__slide {
-    /* display: flex; */
-    /* justify-content: center; */
-}
-
-.splide__slide img {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: auto;
-    height: auto;
-    max-height: 92vh;
-    max-width: 100%;
-    margin: auto;
-    padding-top: 5rem;
-}
-
-.splide__pagination__page {
-    height: 1.2rem !important; 
-    width: 1.2rem !important;
-    margin: 1rem !important;
-}
-
-.showGallery {
+.slider__image-list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     width: 100%;
-    transition: width 500ms ease;
 }
 
-.fixScroll {
+.slide {
     overflow: hidden;
+    position: relative;
+    height: 100%;
+    opacity: 0;
+}
+
+.slide.active {
+    opacity: 1;
+    transition: all 300ms ease;
+}
+
+.slider__image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 
-@media only screen and (max-width: 1194px) {
-    .gallery__container {
-        margin: 0rem 4rem;
-    }
-    .gallery span {
-        right: 5rem;
-    }
-
-    .splide__slide img {
-        padding-top: 2rem;
-    }
+.next__arrow,
+.previous__arrow {
+    color: var(--azul);
+    position: absolute;
+    top: 50%;
+    font-size: 2.5rem;
+    cursor: pointer;
+    z-index: 6;
+    user-select: none;
 }
 
-@media only screen and (max-width: 1194px) {
-    .gallery__container {
-        margin: 0rem 0rem;
-    }
-    .gallery span {
-        top: 8rem;
-        right: 2rem;
-    }
-
-    .splide__slide img {
-        padding-top: 5rem;
-    }
-
-    .splide__pagination__page {
-        height: .8rem !important; 
-        width: .8rem !important;
-        margin: .5rem !important;
-    }
+.next__arrow {
+    right: 2rem;
 }
 
+.previous__arrow {
+    left: 2rem;
+}
+
+.gallery__ball-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100vw;
+    align-self: center;
+    margin: 1rem 0;
+}
+
+.gallery__ball {
+    height: .8rem;
+    width: .8rem;
+    border: solid .1rem white;
+    border-radius: 100%;
+    margin: 0 .5rem;
+}
+
+.gallery__ball.ball__active {
+    background-color: white;
+    transition: all 300ms ease;
+}
