--- a/src/styles/Box.css
+++ b/src/styles/Box.css
@@ -4,16 +4,16 @@
   display: flex;
   align-items: flex-end;
   width: 100%;
-  max-width: 46rem;
-  min-width: 30rem;
+  max-width: 48rem;
   min-height: 15rem;
   cursor: pointer;
   overflow: hidden;
   border-radius: 1rem;
   box-shadow: 0 1rem 3rem -.5rem rgba(0, 0, 0, 0.50);
   background-position: center;
-	background-size: cover;	
+	background-size: 100%;	
   border: solid .2rem var(--pastel);
+  transition: transform 500ms ease, background-size 1s ease;
 }
 
 .box__name {
@@ -24,7 +24,7 @@
 .box__title, .box__subTitle {
   color: white;
   font-weight: 800;
-  font-size: 3rem;   
+  font-size: var(--subTitles);
   margin: 0;
   padding: 0;
   line-height: .9;
@@ -33,7 +33,12 @@
 
 .box__subTitle {
   font-weight: 500;
-  font-size: 2rem;
+  font-size: var(--subTitles2);
   text-transform: uppercase;
 }
 
+.box:hover {
+  transform: scale(1.1);
+  background-size: 120%;
+  transition:  transform 500ms ease, background-size 1s ease;
+}
