--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,16 +1,16 @@
 .btn {
 	background-color: transparent;
 	border: 0.15em solid white;
-	border-radius: 1rem;
+	border-radius: .8rem;
 	color: white;
-	font-size: 1.6rem;
+	font-size: var(--parrafos);
 	letter-spacing: 0.5px;
 	text-decoration: none;
 	transition: color 200ms ease, background 300ms ease;
 }
 
 .btn p {
-	margin: 0.25em 0.75em;
+	margin: 0.3em 1em;
 	font-weight: 600;
 }
 
