--- a/src/styles/Title.css
+++ b/src/styles/Title.css
@@ -1,6 +1,13 @@
 .title {
 	color: white;
-	font-size: 5rem;
+	font-size: var(--titles);
 	margin: 2rem 0;
 	font-weight: 800;
+	max-width: 100rem;
+}
+
+@media (min-width: 1281px) {
+	.title {
+		font-weight: 900;
+	}
 }
